--- a/index.html
+++ b/index.html
@@ -12,14 +12,46 @@
 
     <!-- Create a list of your favorite cuisines and pictures -->
 
+    <ol>
+        <li>Example</li>
+        <li>Example</li>
+        <li>Example</li>
+        <li>Example</li>
+        <li>Example</li>
+        <li>Example</li>
+        <li>Example</li>
+    </ol>
+
 
 
     <!-- Create a list of your favorite dishes with pictures -->
 
-
-
+    <ol></ol>
+        <li>Example
+            <img src="question-mark.webp" alt="question mark">
+        </li>
+        <li>Example
+            <img src="question-mark.webp" alt="question mark">
+        </li>
+        <li>Example
+            <img src="question-mark.webp" alt="question mark">
+        </li>
+        <li>Example
+            <img src="question-mark.webp" alt="question mark">
+        </li>
+        <li>Example
+            <img src="question-mark.webp" alt="question mark">
+        </li>
+        
+    </ol>
 
     <!-- Create a list of recipes with links to sites that provide the recipe -->
+    <ol>
+        <li>Example
+            <a href="google.com"></a>
+        </li>
+        
+    </ol>
 
 
 
