--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Create a list of your favorite cuisines and pictures -->
 
     <ol>
-        <li>Example</li>
-        <li>Example</li>
+        <li>Italy</li>
+        <li>china</li>
         <li>Example</li>
         <li>Example</li>
         <li>Example</li>
