--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
     <!-- Create a list of your favorite cuisines and pictures -->
 
     <ol>
-        <li>Italy</li>
-        <li>china</li>
-        <li>Example</li>
-        <li>Example</li>
-        <li>Example</li>
-        <li>Example</li>
-        <li>Example</li>
+        <li>Italian
+            <img src="Flag_of_Italy.svg.png" alt="Flag_of_Italy">
+        </li>
+        <li>Chinese
+            <img src="Flag_of_the_People's_Republic_of_China.svg.png" alt="Flag_of_the_People">
+        </li>
+        <li>French
+            <img src="Flag_of_France.svg.png" alt="Flag_of_France">
+        </li>
+        <li>Spanish
+            <img src="Bandera_de_España.svg.png" alt="Bandera_de_España">
+        </li>
+        <li>Indian
+            <img src="Flag_of_India.svg.png" alt="Flag_of_India">
+        </li>
+        <li>Greek
+            <img src="Flag_of_Greece.svg.png" alt="Flag_of_Greece">
+        </li>
+        <li>Thai
+            <img src="Flag_of_Thailand.svg.png" alt="Flag_of_Thailand">
+        </li>
     </ol>
 
 
