--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Culinary Chronicles </title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Culinary Chronicles: Showcasing the Best Food in the World</h1>
+    <header>
+    <h1 id="title">Culinary Chronicles: Showcasing the Best Food in the World</h1>
     <h3>A website by: PARTNER 1 & PARTNER 2</h3>
+    </header>
 
     <!-- Create a list of your favorite cuisines and pictures -->
     <ol>
