--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
     <!-- Create a list of your favorite dishes with pictures -->
 
     <ol></ol>
-        <li>Example
-        <img src="question-mark.webp" alt="question mark" width="100px"></li>
-        <li>Example
-        <img src="question-mark.webp" alt="question mark" width="100px"></li>
-        <li>Example
-         <img src="question-mark.webp" alt="question mark" width="100px"></li>
-        <li>Example
-        <img src="question-mark.webp" alt="question mark" width="100px"></li>
-        <li>Example
-        <img src="question-mark.webp" alt="question mark" width="100px"></li>  
+        <li>Example</li>
+        <img src="question-mark.webp" alt="question mark" width="100px">
+        <li>Example</li>
+        <img src="question-mark.webp" alt="question mark" width="100px">
+        <li>Example</li>
+         <img src="question-mark.webp" alt="question mark" width="100px">
+        <li>Example</li>
+        <img src="question-mark.webp" alt="question mark" width="100px">
+        <li>Example</li>
+        <img src="question-mark.webp" alt="question mark" width="100px">
+        
     </ol>
 
     <!-- Create a list of recipes with links to sites that provide the recipe -->
