links to recipes added

--- a/index.html
+++ b/index.html
@@ -48,9 +48,19 @@
     <!-- Create a list of recipes with links to sites that provide the recipe -->
     <ol>
         <li>
-            <a href="google.com">Example</a>
-        </li>
-        
+            <a href="https://www.bbcgoodfood.com/recipes/collection/italian-recipes">Italian recipes</a></li>     
+        <li>
+            <a href="https://www.bbcgoodfood.com/recipes/collection/chinese-recipes">Chinese recipes</a></li>
+        <li>
+            <a href="https://www.bbcgoodfood.com/recipes/collection/french-recipes">French recipes</a></li>     
+        <li>
+            <a href="https://www.bbcgoodfood.com/recipes/collection/spanish-recipes">Spanish recipes</a></li>   
+        <li>
+            <a href="https://www.bbcgoodfood.com/recipes/collection/indian-recipes">India recipes</a></li>
+        <li>
+            <a href="https://www.bbcgoodfood.com/recipes/collection/greek-recipes">Greek recipes</a></li>     
+        <li>
+            <a href="https://www.bbcgoodfood.com/recipes/collection/thai-recipes">Thai recipes</a></li>
     </ol>
 
 
