HTML layout change

--- a/index.html
+++ b/index.html
@@ -15,20 +15,27 @@
 
     <!-- Create a list of your favorite cuisines and pictures -->
     <ol>
-        <li>Italian</li>
+        <li>Italian
         <img src="Flag_of_Italy.svg.png" alt="Flag_of_Italy" width="100px">
-        <li>Chinese</li>
+        </li>
+        <li>Chinese
         <img src="Flag_of_the_People's_Republic_of_China.svg.png" alt="Flag_of_the_People" width="100px">
-        <li>French</li>
+        </li>
+        <li>French
         <img src="Flag_of_France.svg.png" alt="Flag_of_France" width="100px">
-        <li>Spanish</li>
+        </li>
+        <li>Spanish
         <img src="Bandera_de_España.svg.png" alt="Bandera_de_España" width="100px">
-        <li>Indian</li>
+        </li>
+        <li>Indian
         <img src="Flag_of_India.svg.png" alt="Flag_of_India" width="100px">
-        <li>Greek</li>
+        </li>
+        <li>Greek
         <img src="Flag_of_Greece.svg.png" alt="Flag_of_Greece" width="100px">
-        <li>Thai</li>
+        </li>
+        <li>Thai
         <img src="Flag_of_Thailand.svg.png" alt="Flag_of_Thailand" width="100px">
+        </li>
     </ol>
     <!-- Create a list of your favorite dishes with pictures -->
 
