added some national dises

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </ol>
     <!-- Create a list of your favorite dishes with pictures -->
 
-    <ol></ol>
-        <li>Example
-        <img src="question-mark.webp" alt="question mark" width="100px"></li>
-        <li>Example
-        <img src="question-mark.webp" alt="question mark" width="100px"></li>
+    <ol>National dishes</ol>
+        <li>Ragú alla Bolognese
+        <img src="ragu.jpg" alt="Ragú alla Bolognese" width="100px"></li>
+        <li>Peking duck
+        <img src="Peking_Duck.jpg" alt="Peking duck" width="100px"></li>
         <li>Example
          <img src="question-mark.webp" alt="question mark" width="100px"></li>
         <li>Example
